# Problems

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pre-commit
.github/workflows/: checks.yaml
Algorithms/: README.md
Algorithms/CumulativeProduct/: CMakeLists.txt  CumProdWoTerm.cpp  CumProdWoTerm.hpp  CumProdWoTerm_Main.cpp
Algorithms/CumulativeProduct/tests/: CumProdWoTerm.test.cpp
Probabilities/: README.md
Probabilities/BlackWhiteBall/: dp.cpp
Probabilities/RandomNumberGenerator/: RandNumGen.cpp
Probabilities/ReservoirSampling/: RandPickDataStream.cpp
Probabilities/Shuffling/: Shuffling.cpp
tests/: CMakeLists.txt  TestsMain.cpp
